# xen

./: .gitignore  .hgignore  Config.mk  INSTALL  MAINTAINERS  Makefile  Makefile.mini-os  autogen.sh  configure  configure.ac
config/: MiniOS.mk
docs/man/: xl.cfg.pod.5  xl.pod.1.in
docs/misc/: xen-command-line.markdown
stubdom/: Makefile
tools/: Makefile  configure  configure.ac
tools/blktap2/: Makefile
tools/console/: Makefile
tools/examples/: Makefile
tools/firmware/: Makefile
tools/flask/: Makefile
tools/helpers/: Makefile
tools/hotplug/: Makefile
tools/include/: Makefile
tools/libfsimage/: Makefile
tools/libs/: Makefile
tools/libvchan/: Makefile
tools/libxc/: Makefile  xc_dom_arm.c  xc_dom_x86.c  xc_hvm_build_x86.c  xc_private.h
tools/libxl/: Makefile  libxl.h  libxl_arm.c  libxl_create.c  libxl_dm.c  libxl_dom.c  libxl_internal.h  libxl_types.idl  libxl_vnuma.c  libxl_x86.c  libxlu_cfg.c  libxlu_cfg_i.h  libxlu_cfg_y.c  libxlu_cfg_y.y  libxlu_internal.h  libxlutil.h  xl_cmdimpl.c
tools/memshr/: Makefile
tools/misc/: Makefile  xencov.c  xencov_split
tools/ocaml/: Makefile
tools/pygrub/: Makefile
tools/python/: Makefile
tools/tests/: Makefile
tools/xcutils/: Makefile
tools/xenbackendd/: Makefile
tools/xenmon/: Makefile
tools/xenpaging/: Makefile
tools/xenpmd/: Makefile
tools/xenstat/: Makefile
tools/xenstore/: Makefile  xenstored_core.c
tools/xentrace/: Makefile
tools/xl/: xl.h  xl_cmdtable.c
xen/: Kconfig  Kconfig.debug  Makefile
xen/common/: Kconfig  Makefile  cpu.c  domain.c  event_channel.c  kexec.c  (+11 more)
(+210 files in other folders)
